updated plots and text

--- a/LatexManuscript/MBE/legacy.tex
+++ b/LatexManuscript/MBE/legacy.tex
@@ -566,8 +566,9 @@ Mutation spectrum enrichment of  $Q$-associated variants across each chromosome.
 Chromosome 1 has a strong enrichment in *AC${\rightarrow}$*CC mutational pattern.
 \textbf{C} The number of $Q$-associated variants per 1Mb window across the genome.
 Grey bars indicate regions within and black bars indicate regions outside the 1000 Genomes Project strict mask.
+\textbf{D} Blue bars indicate the density of variants passing the strict mask with the *AC${\rightarrow}$*CC mutational pattern whereas red points have the T*T${\rightarrow}$TTT mutational pattern.
 Three regions not flagged by the 1000 Genomes Project strict mask in chromosomes 1, 2 and 17 have more than 30 variants per window.
-\textbf{D} Distribution of variant counts per 1Mb window. Where variants that fail the strict mask are in grey and those that pass are in black. 
+\textbf{E} Distribution of variant counts per 1Mb window. Where variants that fail the strict mask are in grey and those that pass are in black. 
 }  
 \label{CountPerChrom}
 \end{figure}
@@ -576,7 +577,8 @@ Three regions not flagged by the 1000 Genomes Project strict mask in chromosomes
 \begin{figure}[tbp]
 \centering
 \includegraphics[width=10cm,keepaspectratio]{RegionOver10.jpg}
-\caption{Manhattan plot of the $-\log_{10}(p)$ values for the reverse GWAS logistic regression analysis for the three 1Mb windows with the most  $Q$-associated variants per 1Mb across the genome.}  
+\caption{Manhattan plot of the $-\log_{10}(p)$ values for the reverse GWAS logistic regression analysis for the three 1Mb windows with the most  $Q$-associated variants per 1Mb across the genome. 
+In these plots, blue points are variants with the *AC${\rightarrow}$*CC mutational pattern whereas red points have the T*T${\rightarrow}$TTT mutational pattern.}  
 \label{Top10}
 \end{figure}
 
